--- a/frontend/individual-assignment/package.json
+++ b/frontend/individual-assignment/package.json
@@ -36,10 +36,13 @@
     "jest": "^24.1.0",
     "jest-dom": "^2.1.1",
     "mini-css-extract-plugin": "^0.4.2",
+    "node-sass": "^5.0.0",
     "regenerator-runtime": "^0.12.1",
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1",
     "standard": "^12.0.1",
     "style-loader": "^0.23.0",
-    "webpack": "^4.18.0",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": ">=3.1.11"
   },
@@ -73,7 +76,9 @@
     "transformIgnorePatterns": [
       "/node_modules/"
     ],
-    "setupFilesAfterEnv": ["<rootDir>/config/setupTest.js"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/config/setupTest.js"
+    ],
     "transform": {
       "^.+\\.js$": "babel-jest"
     },
